# OMNIA-THREE-BODY

./: .gitignore  CITATION.cff  README.md  ecosystem_manifest.json  pyproject.toml
archive/readme-history/: README.before-clickable-links-repair-20260520T140827Z.md  README.before-doi-release-20260520T134554Z.md  README.before-dynamic-divergence-20260520T131557Z.md
docs/: ACTIVE_CLAIM_MICRO_FIX_REPORT.json  ACTIVE_CLAIM_MICRO_FIX_REPORT.md  BACKBONE_COMPLIANCE.md  BOUNDARY.md  CROSS_REPRESENTATION_DIVERGENCE.md  DIVERGENCE_AND_INSTABILITY.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  PERTURBATION_REGIMES.md  PHYSICAL_CLAIM_BOUNDARY.md  PRODUCTION_READINESS.md  QUICKSTART_THREE_BODY.md  REPOSITORY_STATUS.md  RESULTS_INDEX.md  THREE_BODY_MANIFEST.json  THREE_BODY_OVERVIEW.md  THREE_BODY_SCOPE.md  THREE_BODY_STRUCTURAL_DIVERGENCE.md  TRAJECTORY_CONTRACT.md
examples/: omnia_three_body_minimal_stress.json  run_perturbation_sweep.py  run_representation_analysis.py  run_three_body_demo.py
omnia_three_body/: __init__.py  backbone_adapter.py
results/: perturbation_sweep.json  representation_comparison.json  three_body_metrics.json
tests/: test_backbone_adapter.py  test_repository_smoke.py
